# craie

./: .clang-format  .clang-tidy  CMakeLists.txt  lint.py
.github/workflows/: main.yml
src/common/: CMakeLists.txt  assume.hpp  exception.hpp  iequal.hpp  log.cpp  log.hpp
src/core/: CMakeLists.txt  generator.cpp  generator.hpp
src/ui/: CMakeLists.txt  SpinBoxReal.qml  SplitView.qml  context.cpp  context.hpp  main.cpp  main.qml
